--- a/House_Price_Prediction.ipynb
+++ b/House_Price_Prediction.ipynb
@@ -1324,7 +1324,7 @@
    "source": [
     "### Data Visualization\n",
     "\n",
-    "Visualize the distribution of numerical features with bar charts and categorical features with pie charts"
+    "Visualize the distribution of numerical features with bar charts and categorical features with pie charts - refer to Part1_figs and part2_figs folder for the results of categorical and numerical feature distributions respectively."
    ]
   },
   {
@@ -1333,25 +1333,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Pie charts for categorical variables \n",
-    "# for var in categorical_vars:\n",
-    "#     lst = df_train[var].tolist()\n",
-    "#     countsdict = dict()\n",
-    "#     print(var)\n",
-    "#     for element in lst: \n",
-    "#         countsdict[element] = countsdict.get(element, 0) + 1 \n",
-    "#     labels = countsdict.keys()\n",
-    "#     sizes = countsdict.values()\n",
-    "#     total = sum(sizes)\n",
-    "#     percentages = [(size / total) * 100 for size in sizes]\n",
-    "#     legend_labels = [f'{label} - {percentage:.1f}%' for label, percentage in zip(labels, percentages)]\n",
-    "#     plt.figure()\n",
-    "#     plt.style.use(\"fivethirtyeight\")\n",
-    "#     plt.title(f'Distribution of {var}')\n",
-    "#     plt.pie(sizes, startangle=90, textprops={'fontsize': 10})\n",
-    "#     plt.legend(legend_labels, bbox_to_anchor=(1.05, 1), loc=\"upper left\" )\n",
-    "#     plt.tight_layout()\n",
-    "#     plt.savefig(f'Part1_figs/dist_of_{var}', dpi=200)\n"
+    "#Pie charts for categorical variables \n",
+    "for var in categorical_vars:\n",
+    "    lst = df_train[var].tolist()\n",
+    "    countsdict = dict()\n",
+    "    print(var)\n",
+    "    for element in lst: \n",
+    "        countsdict[element] = countsdict.get(element, 0) + 1 \n",
+    "    labels = countsdict.keys()\n",
+    "    sizes = countsdict.values()\n",
+    "    total = sum(sizes)\n",
+    "    percentages = [(size / total) * 100 for size in sizes]\n",
+    "    legend_labels = [f'{label} - {percentage:.1f}%' for label, percentage in zip(labels, percentages)]\n",
+    "    plt.figure()\n",
+    "    plt.style.use(\"fivethirtyeight\")\n",
+    "    plt.title(f'Distribution of {var}')\n",
+    "    plt.pie(sizes, startangle=90, textprops={'fontsize': 10})\n",
+    "    plt.legend(legend_labels, bbox_to_anchor=(1.05, 1), loc=\"upper left\" )\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'Part1_figs/dist_of_{var}', dpi=200)\n"
    ]
   },
   {
@@ -1362,21 +1362,19 @@
    "source": [
     "#Distribution of Numerical Variables\n",
     "\n",
-    "# for var in numerical_vars:\n",
-    "#     lst = df_train[var].tolist()\n",
-    "#     lst = np.array(lst)\n",
-    "#     text = f'Mean: {round(stats_dict[var][0], 1)} \\nStdDev: {round(stats_dict[var][1], 1)} \\nRange: {stats_dict[var][2]} \\n'\n",
-    "#     plt.figure()\n",
-    "#     plt.hist(lst, bins= 20, edgecolor = 'black')\n",
-    "#     plt.title(f'Distribution of {var}')\n",
-    "#     plt.xlabel(f'{var}')\n",
-    "#     plt.ylabel('Counts')\n",
-    "#     plt.text(1.05, 0.80, text, ha='left', va='bottom', transform=plt.gca().transAxes,\n",
-    "#                    bbox=dict(boxstyle='round', facecolor='wheat', alpha=0.5))\n",
-    "#     plt.tight_layout()\n",
-    "#     plt.savefig(f'Part2_figs/dist_of_ {var}', facecolor= 'w')\n",
-    "\n",
-    "# print(lst)\n",
+    "for var in numerical_vars:\n",
+    "    lst = df_train[var].tolist()\n",
+    "    lst = np.array(lst)\n",
+    "    text = f'Mean: {round(stats_dict[var][0], 1)} \\nStdDev: {round(stats_dict[var][1], 1)} \\nRange: {stats_dict[var][2]} \\n'\n",
+    "    plt.figure()\n",
+    "    plt.hist(lst, bins= 20, edgecolor = 'black')\n",
+    "    plt.title(f'Distribution of {var}')\n",
+    "    plt.xlabel(f'{var}')\n",
+    "    plt.ylabel('Counts')\n",
+    "    plt.text(1.05, 0.80, text, ha='left', va='bottom', transform=plt.gca().transAxes,\n",
+    "                   bbox=dict(boxstyle='round', facecolor='wheat', alpha=0.5))\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f'Part2_figs/dist_of_ {var}', facecolor= 'w')\n",
     "    "
    ]
   },
@@ -1767,6 +1765,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Ensure that the columns are in the same order for when the dataframes are converted into arrays\n",
     "df_test = df_test[df_train.columns]"
    ]
   },
@@ -1785,6 +1784,7 @@
     }
    ],
    "source": [
+    "#Check for the presence of null values\n",
     "print(df_test.isnull().sum().sum())\n",
     "print(df_train.isnull().sum().sum())"
    ]
@@ -1795,6 +1795,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Fill all null values with 0\n",
     "df_train.fillna(value= 0, inplace=True)\n",
     "df_test.fillna(value= 0, inplace=True)"
    ]
