--- a/House_Price_Prediction.ipynb
+++ b/House_Price_Prediction.ipynb
@@ -1248,40 +1248,40 @@
     }
    ],
    "source": [
-    "#Identify each variable type as either categorical or numerical and store\n",
+    "# Identify each variable type as either categorical or numerical and store\n",
     "numerical_vars = []\n",
     "categorical_vars = []\n",
     "\n",
     "for var in variables:\n",
     "    i = 0\n",
-    "    try: \n",
+    "    try:\n",
     "        while np.isnan(df_train[var].iloc[i]):\n",
     "            i += 1\n",
     "    except TypeError as te:\n",
-    "        print(f'Error at {var}: {te}')\n",
+    "        print(f\"Error at {var}: {te}\")\n",
     "    if type(df_train[var].iloc[i]) in [np.int64, np.float64, float]:\n",
     "        numerical_vars.append(var)\n",
-    "    elif type(df_train[var].iloc[i]) == str: \n",
+    "    elif type(df_train[var].iloc[i]) == str:\n",
     "        categorical_vars.append(var)\n",
     "\n",
-    "#Some categorical features have numerical values - swap these from numerical into categorical\n",
-    "numtocat = ['MSSubClass']\n",
+    "# Some categorical features have numerical values - swap these from numerical into categorical\n",
+    "numtocat = [\"MSSubClass\"]\n",
     "for var in variables:\n",
     "    if var in numtocat:\n",
     "        numerical_vars.remove(var)\n",
     "        categorical_vars.append(var)\n",
     "\n",
-    "#Remove Id and MoSold as a numerical variable\n",
-    "df_train.drop('Id', axis=1, inplace=True)\n",
-    "df_test.drop('Id', axis=1, inplace=True)\n",
-    "numerical_vars.remove('Id')\n",
-    "df_train.drop('MoSold', axis= 1, inplace= True)\n",
-    "df_test.drop('MoSold', axis=1, inplace=True)\n",
-    "numerical_vars.remove('MoSold')\n",
+    "# Remove Id and MoSold as a numerical variable\n",
+    "df_train.drop(\"Id\", axis=1, inplace=True)\n",
+    "df_test.drop(\"Id\", axis=1, inplace=True)\n",
+    "numerical_vars.remove(\"Id\")\n",
+    "df_train.drop(\"MoSold\", axis=1, inplace=True)\n",
+    "df_test.drop(\"MoSold\", axis=1, inplace=True)\n",
+    "numerical_vars.remove(\"MoSold\")\n",
     "\n",
-    "#Print numerical and categorical vars\n",
-    "print('Numerical vars are: ', numerical_vars)\n",
-    "print('Categorical vars are: ', categorical_vars)"
+    "# Print numerical and categorical vars\n",
+    "print(\"Numerical vars are: \", numerical_vars)\n",
+    "print(\"Categorical vars are: \", categorical_vars)"
    ]
   },
   {
@@ -1305,7 +1305,7 @@
     }
    ],
    "source": [
-    "#Store the mean, std dev and range of each numerical variable in a dictionary\n",
+    "# Store the mean, std dev and range of each numerical variable in a dictionary\n",
     "stats_dict = dict()\n",
     "for var in numerical_vars:\n",
     "    try:\n",
@@ -1314,7 +1314,7 @@
     "        stats_dict[var].append(np.std(df_train[var]))\n",
     "        stats_dict[var].append(np.max(df_train[var] - np.min(df_train[var])))\n",
     "    except TypeError as te:\n",
-    "        print(f'error at iteration {var}: {te}')\n",
+    "        print(f\"error at iteration {var}: {te}\")\n",
     "print(stats_dict)"
    ]
   },
@@ -1333,25 +1333,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Pie charts for categorical variables \n",
+    "# Pie charts for categorical variables\n",
     "for var in categorical_vars:\n",
     "    lst = df_train[var].tolist()\n",
     "    countsdict = dict()\n",
     "    print(var)\n",
-    "    for element in lst: \n",
-    "        countsdict[element] = countsdict.get(element, 0) + 1 \n",
+    "    for element in lst:\n",
+    "        countsdict[element] = countsdict.get(element, 0) + 1\n",
     "    labels = countsdict.keys()\n",
     "    sizes = countsdict.values()\n",
     "    total = sum(sizes)\n",
     "    percentages = [(size / total) * 100 for size in sizes]\n",
-    "    legend_labels = [f'{label} - {percentage:.1f}%' for label, percentage in zip(labels, percentages)]\n",
+    "    legend_labels = [\n",
+    "        f\"{label} - {percentage:.1f}%\" for label, percentage in zip(labels, percentages)\n",
+    "    ]\n",
     "    plt.figure()\n",
     "    plt.style.use(\"fivethirtyeight\")\n",
-    "    plt.title(f'Distribution of {var}')\n",
-    "    plt.pie(sizes, startangle=90, textprops={'fontsize': 10})\n",
-    "    plt.legend(legend_labels, bbox_to_anchor=(1.05, 1), loc=\"upper left\" )\n",
+    "    plt.title(f\"Distribution of {var}\")\n",
+    "    plt.pie(\n",
+    "        sizes,\n",
+    "        startangle=90,\n",
+    "        textprops={\"fontsize\": 10},\n",
+    "        wedgeprops={\"edgecolor\": \"black\", \"linewidth\": 0.5, \"antialiased\": True},\n",
+    "    )\n",
+    "    plt.legend(legend_labels, bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'Part1_figs/dist_of_{var}', dpi=200)\n"
+    "    plt.savefig(f\"Part1_figs/dist_of_{var}\", dpi=200)"
    ]
   },
   {
@@ -1360,22 +1367,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Distribution of Numerical Variables\n",
+    "# Distribution of Numerical Variables\n",
     "\n",
     "for var in numerical_vars:\n",
     "    lst = df_train[var].tolist()\n",
     "    lst = np.array(lst)\n",
-    "    text = f'Mean: {round(stats_dict[var][0], 1)} \\nStdDev: {round(stats_dict[var][1], 1)} \\nRange: {stats_dict[var][2]} \\n'\n",
+    "    text = f\"Mean: {round(stats_dict[var][0], 1)} \\nStdDev: {round(stats_dict[var][1], 1)} \\nRange: {stats_dict[var][2]} \\n\"\n",
     "    plt.figure()\n",
-    "    plt.hist(lst, bins= 20, edgecolor = 'black')\n",
-    "    plt.title(f'Distribution of {var}')\n",
-    "    plt.xlabel(f'{var}')\n",
-    "    plt.ylabel('Counts')\n",
-    "    plt.text(1.05, 0.80, text, ha='left', va='bottom', transform=plt.gca().transAxes,\n",
-    "                   bbox=dict(boxstyle='round', facecolor='wheat', alpha=0.5))\n",
+    "    plt.hist(lst, bins=20, edgecolor=\"black\")\n",
+    "    plt.title(f\"Distribution of {var}\")\n",
+    "    plt.xlabel(f\"{var}\")\n",
+    "    plt.ylabel(\"Counts\")\n",
+    "    plt.text(\n",
+    "        1.05,\n",
+    "        0.80,\n",
+    "        text,\n",
+    "        ha=\"left\",\n",
+    "        va=\"bottom\",\n",
+    "        transform=plt.gca().transAxes,\n",
+    "        bbox=dict(boxstyle=\"round\", facecolor=\"wheat\", alpha=0.5),\n",
+    "    )\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'Part2_figs/dist_of_ {var}', facecolor= 'w')\n",
-    "    "
+    "    plt.savefig(f\"Part2_figs/dist_of_ {var}\", facecolor=\"w\")"
    ]
   },
   {
@@ -1391,10 +1404,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Remove SalePrice from training set and numerical_vars\n",
-    "numerical_vars.remove('SalePrice')\n",
-    "y_train = df_train['SalePrice'].tolist()\n",
-    "df_train.drop('SalePrice', axis= 1, inplace= True)"
+    "# Remove SalePrice from training set and numerical_vars\n",
+    "numerical_vars.remove(\"SalePrice\")\n",
+    "y_train = df_train[\"SalePrice\"].tolist()\n",
+    "df_train.drop(\"SalePrice\", axis=1, inplace=True)"
    ]
   },
   {
@@ -1447,18 +1460,22 @@
     }
    ],
    "source": [
-    "#Convert all dates into numerical features - years from today\n",
-    "date_vars = ['YearBuilt', 'YearRemodAdd', 'GarageYrBlt', 'YrSold']\n",
+    "# Convert all dates into numerical features - years from today\n",
+    "date_vars = [\"YearBuilt\", \"YearRemodAdd\", \"GarageYrBlt\", \"YrSold\"]\n",
     "\n",
     "for var in date_vars:\n",
-    "        lst = df_train[var].tolist()\n",
-    "        df_train[var].replace(dict(zip(df_train[var], [2020 - value for value in lst])), inplace=True)\n",
-    "        lst = df_test[var].tolist()\n",
-    "        df_test[var].replace(dict(zip(df_test[var], [2020 - value for value in lst])), inplace=True)\n",
+    "    lst = df_train[var].tolist()\n",
+    "    df_train[var].replace(\n",
+    "        dict(zip(df_train[var], [2020 - value for value in lst])), inplace=True\n",
+    "    )\n",
+    "    lst = df_test[var].tolist()\n",
+    "    df_test[var].replace(\n",
+    "        dict(zip(df_test[var], [2020 - value for value in lst])), inplace=True\n",
+    "    )\n",
     "\n",
     "# Check the updated DataFrame\n",
-    "print(df_train[['YearBuilt', 'YearRemodAdd', 'GarageYrBlt', 'YrSold']])\n",
-    "print(df_test[['YearBuilt', 'YearRemodAdd', 'GarageYrBlt', 'YrSold']])"
+    "print(df_train[[\"YearBuilt\", \"YearRemodAdd\", \"GarageYrBlt\", \"YrSold\"]])\n",
+    "print(df_test[[\"YearBuilt\", \"YearRemodAdd\", \"GarageYrBlt\", \"YrSold\"]])"
    ]
   },
   {
@@ -1521,19 +1538,19 @@
     "import sklearn\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "#Normalize numerical variables\n",
+    "# Normalize numerical variables\n",
     "\n",
     "for var in numerical_vars:\n",
     "    trainlist = df_train[var].tolist()\n",
     "    testlist = df_test[var].tolist()\n",
     "    scaler = MinMaxScaler()\n",
-    "    trainlist_normalized = scaler.fit_transform(np.array(trainlist).reshape(-1,1))\n",
-    "    testlist_normalized = scaler.fit_transform(np.array(testlist).reshape(-1,1))\n",
+    "    trainlist_normalized = scaler.fit_transform(np.array(trainlist).reshape(-1, 1))\n",
+    "    testlist_normalized = scaler.fit_transform(np.array(testlist).reshape(-1, 1))\n",
     "    df_train[var].replace(dict(zip(df_train[var], trainlist_normalized)), inplace=True)\n",
     "    df_test[var].replace(dict(zip(df_test[var], testlist_normalized)), inplace=True)\n",
     "\n",
     "print(df_train.head())\n",
-    "print(df_test.head())\n"
+    "print(df_test.head())"
    ]
   },
   {
@@ -1596,7 +1613,7 @@
    ],
    "source": [
     "print(categorical_vars)\n",
-    "print('Street' in df_train.columns.tolist())\n",
+    "print(\"Street\" in df_train.columns.tolist())\n",
     "print(df_train.head())\n",
     "print(df_test.head())"
    ]
@@ -1607,9 +1624,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#One-hot encoding for categorical variables\n",
+    "# One-hot encoding for categorical variables\n",
     "df_train = pd.get_dummies(df_train, columns=categorical_vars)\n",
-    "df_test = pd.get_dummies(df_test, columns=categorical_vars) "
+    "df_test = pd.get_dummies(df_test, columns=categorical_vars)"
    ]
   },
   {
@@ -1737,8 +1754,7 @@
     }
    ],
    "source": [
-    "#Ensure consistency in one-hot encoding - fill columns in test set with zero that are not present in train set\n",
-    "\n",
+    "# Ensure consistency in one-hot encoding - fill columns in test set with zero that are not present in train set and vice versa\n",
     "lst1 = df_train.columns.tolist()\n",
     "lst2 = df_test.columns.tolist()\n",
     "\n",
@@ -1765,7 +1781,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Ensure that the columns are in the same order for when the dataframes are converted into arrays\n",
+    "# Ensure that the columns are in the same order for when the dataframes are converted into arrays\n",
     "df_test = df_test[df_train.columns]"
    ]
   },
@@ -1784,7 +1800,7 @@
     }
    ],
    "source": [
-    "#Check for the presence of null values\n",
+    "# Check for the presence of null values\n",
     "print(df_test.isnull().sum().sum())\n",
     "print(df_train.isnull().sum().sum())"
    ]
@@ -1795,9 +1811,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Fill all null values with 0\n",
-    "df_train.fillna(value= 0, inplace=True)\n",
-    "df_test.fillna(value= 0, inplace=True)"
+    "# Fill all null values with 0\n",
+    "df_train.fillna(value=0, inplace=True)\n",
+    "df_test.fillna(value=0, inplace=True)"
    ]
   },
   {
@@ -1826,7 +1842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear Regression"
+    "## Machine Learning Model"
    ]
   },
   {
@@ -1844,8 +1860,7 @@
     }
    ],
    "source": [
-    "#Obtain x_train, y_train, x_test arrays \n",
-    "\n",
+    "# Obtain x_train, y_train, x_test arrays\n",
     "x_train = df_train.to_numpy()\n",
     "y_train = np.array(y_train)\n",
     "x_test = df_test.to_numpy()\n",
@@ -1916,11 +1931,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission = pd.DataFrame({\n",
-    "        \"Id\": index,\n",
-    "        \"SalePrice\": y_pred\n",
-    "    })\n",
-    "submission.to_csv('submission.csv', index= False)"
+    "submission = pd.DataFrame({\"Id\": index, \"SalePrice\": y_pred})\n",
+    "submission.to_csv(\"submission.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checking formatting\n",
+    "# how is the formatting\n",
+    "\n",
+    "print(\"Hello World\")"
    ]
   }
  ],
