--- a/House_Price_Prediction.ipynb
+++ b/House_Price_Prediction.ipynb
@@ -2783,15 +2783,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38487258.04241205\n",
-      "859883163.4478971\n"
+      "3273208.800870587\n",
+      "962595586.4346488\n"
      ]
     }
    ],
@@ -2848,16 +2848,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_coordinate_descent.py:631: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 2.010e+11, tolerance: 6.814e+08\n",
+      "  model = cd_fast.enet_coordinate_descent(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "412947749.57503456\n",
+      "709514367.0284616\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_coordinate_descent.py:631: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.508e+11, tolerance: 9.208e+08\n",
+      "  model = cd_fast.enet_coordinate_descent(\n"
+     ]
+    }
+   ],
    "source": [
-    "# Lasso regression"
+    "# Lasso regression\n",
+    "from sklearn.linear_model import Lasso\n",
+    "\n",
+    "lrr = Lasso(alpha=0.15)\n",
+    "X_train, X_val, Y_train, Y_val = train_test_split(x_train, y_train)\n",
+    "lrr.fit(X_train, Y_train)\n",
+    "Y_pred_val = lrr.predict(X_val)\n",
+    "Y_pred_train = lrr.predict(X_train)\n",
+    "train_mse = mean_squared_error(Y_train, Y_pred_train)\n",
+    "val_mse = mean_squared_error(Y_val, Y_pred_val)\n",
+    "\n",
+    "lrr.fit(x_train, y_train)\n",
+    "y_pred = lrr.predict(x_test)\n",
+    "\n",
+    "print(train_mse)\n",
+    "print(val_mse)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
