max_iter increased in lasso due to non-convergence

--- a/House_Price_Prediction.ipynb
+++ b/House_Price_Prediction.ipynb
@@ -2831,7 +2831,8 @@
    "source": [
     "# Kernel ridge regression\n",
     "from sklearn.kernel_ridge import KernelRidge\n",
-    "krr = KernelRidge(alpha=0.5, kernel='rbf', gamma=0.1, degree=3)\n",
+    "\n",
+    "krr = KernelRidge(alpha=0.5, kernel=\"rbf\", gamma=0.1, degree=3)\n",
     "X_train, X_val, Y_train, Y_val = train_test_split(x_train, y_train)\n",
     "krr.fit(X_train, Y_train)\n",
     "Y_pred_val = krr.predict(X_val)\n",
@@ -2848,31 +2849,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_coordinate_descent.py:631: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 2.010e+11, tolerance: 6.814e+08\n",
-      "  model = cd_fast.enet_coordinate_descent(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "412947749.57503456\n",
-      "709514367.0284616\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_coordinate_descent.py:631: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 1.508e+11, tolerance: 9.208e+08\n",
-      "  model = cd_fast.enet_coordinate_descent(\n"
+      "434815292.62932706\n",
+      "587471102.5890776\n"
      ]
     }
    ],
@@ -2880,7 +2865,7 @@
     "# Lasso regression\n",
     "from sklearn.linear_model import Lasso\n",
     "\n",
-    "lrr = Lasso(alpha=0.15)\n",
+    "lrr = Lasso(alpha=0.25, max_iter= 10000)\n",
     "X_train, X_val, Y_train, Y_val = train_test_split(x_train, y_train)\n",
     "lrr.fit(X_train, Y_train)\n",
     "Y_pred_val = lrr.predict(X_val)\n",
@@ -2897,7 +2882,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "130911320.59800772\n",
+      "855865530.7006454\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Random forest ensemble with no depth limit\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "rfr = RandomForestRegressor(\n",
+    "    n_estimators=300,\n",
+    "    max_depth=None,\n",
+    ")\n",
+    "X_train, X_val, Y_train, Y_val = train_test_split(x_train, y_train)\n",
+    "rfr.fit(X_train, Y_train)\n",
+    "Y_pred_val = rfr.predict(X_val)\n",
+    "Y_pred_train = rfr.predict(X_train)\n",
+    "train_mse = mean_squared_error(Y_train, Y_pred_train)\n",
+    "val_mse = mean_squared_error(Y_val, Y_pred_val)\n",
+    "\n",
+    "rfr.fit(x_train, y_train)\n",
+    "y_pred = rfr.predict(x_test)\n",
+    "\n",
+    "print(train_mse)\n",
+    "print(val_mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
