uncommented plots code

--- a/House_Price_Prediction.ipynb
+++ b/House_Price_Prediction.ipynb
@@ -1334,31 +1334,31 @@
    "outputs": [],
    "source": [
     "# Pie charts for categorical variables\n",
-    "# for var in categorical_vars:\n",
-    "#     lst = df_train[var].tolist()\n",
-    "#     countsdict = dict()\n",
-    "#     print(var)\n",
-    "#     for element in lst:\n",
-    "#         countsdict[element] = countsdict.get(element, 0) + 1\n",
-    "#     labels = countsdict.keys()\n",
-    "#     sizes = countsdict.values()\n",
-    "#     total = sum(sizes)\n",
-    "#     percentages = [(size / total) * 100 for size in sizes]\n",
-    "#     legend_labels = [\n",
-    "#         f\"{label} - {percentage:.1f}%\" for label, percentage in zip(labels, percentages)\n",
-    "#     ]\n",
-    "#     plt.figure()\n",
-    "#     plt.style.use(\"fivethirtyeight\")\n",
-    "#     plt.title(f\"Distribution of {var}\")\n",
-    "#     plt.pie(\n",
-    "#         sizes,\n",
-    "#         startangle=90,\n",
-    "#         textprops={\"fontsize\": 10},\n",
-    "#         wedgeprops={\"edgecolor\": \"black\", \"linewidth\": 0.5, \"antialiased\": True},\n",
-    "#     )\n",
-    "#     plt.legend(legend_labels, bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
-    "#     plt.tight_layout()\n",
-    "#     plt.savefig(f\"Part1_figs/dist_of_{var}\", dpi=200)"
+    "for var in categorical_vars:\n",
+    "    lst = df_train[var].tolist()\n",
+    "    countsdict = dict()\n",
+    "    print(var)\n",
+    "    for element in lst:\n",
+    "        countsdict[element] = countsdict.get(element, 0) + 1\n",
+    "    labels = countsdict.keys()\n",
+    "    sizes = countsdict.values()\n",
+    "    total = sum(sizes)\n",
+    "    percentages = [(size / total) * 100 for size in sizes]\n",
+    "    legend_labels = [\n",
+    "        f\"{label} - {percentage:.1f}%\" for label, percentage in zip(labels, percentages)\n",
+    "    ]\n",
+    "    plt.figure()\n",
+    "    plt.style.use(\"fivethirtyeight\")\n",
+    "    plt.title(f\"Distribution of {var}\")\n",
+    "    plt.pie(\n",
+    "        sizes,\n",
+    "        startangle=90,\n",
+    "        textprops={\"fontsize\": 10},\n",
+    "        wedgeprops={\"edgecolor\": \"black\", \"linewidth\": 0.5, \"antialiased\": True},\n",
+    "    )\n",
+    "    plt.legend(legend_labels, bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f\"Part1_figs/dist_of_{var}\", dpi=200)"
    ]
   },
   {
@@ -1369,26 +1369,26 @@
    "source": [
     "# Distribution of Numerical Variables\n",
     "\n",
-    "# for var in numerical_vars:\n",
-    "#     lst = df_train[var].tolist()\n",
-    "#     lst = np.array(lst)\n",
-    "#     text = f\"Mean: {round(stats_dict[var][0], 1)} \\nStdDev: {round(stats_dict[var][1], 1)} \\nRange: {stats_dict[var][2]} \\n\"\n",
-    "#     plt.figure()\n",
-    "#     plt.hist(lst, bins=20, edgecolor=\"black\")\n",
-    "#     plt.title(f\"Distribution of {var}\")\n",
-    "#     plt.xlabel(f\"{var}\")\n",
-    "#     plt.ylabel(\"Counts\")\n",
-    "#     plt.text(\n",
-    "#         1.05,\n",
-    "#         0.60,\n",
-    "#         text,\n",
-    "#         ha=\"left\",\n",
-    "#         va=\"bottom\",\n",
-    "#         transform=plt.gca().transAxes,\n",
-    "#         bbox=dict(boxstyle=\"round\", facecolor=\"wheat\", alpha=0.5),\n",
-    "#     )\n",
-    "#     plt.tight_layout()\n",
-    "#     plt.savefig(f\"Part2_figs/dist_of_ {var}\", facecolor=\"w\")"
+    "for var in numerical_vars:\n",
+    "    lst = df_train[var].tolist()\n",
+    "    lst = np.array(lst)\n",
+    "    text = f\"Mean: {round(stats_dict[var][0], 1)} \\nStdDev: {round(stats_dict[var][1], 1)} \\nRange: {stats_dict[var][2]} \\n\"\n",
+    "    plt.figure()\n",
+    "    plt.hist(lst, bins=20, edgecolor=\"black\")\n",
+    "    plt.title(f\"Distribution of {var}\")\n",
+    "    plt.xlabel(f\"{var}\")\n",
+    "    plt.ylabel(\"Counts\")\n",
+    "    plt.text(\n",
+    "        1.05,\n",
+    "        0.60,\n",
+    "        text,\n",
+    "        ha=\"left\",\n",
+    "        va=\"bottom\",\n",
+    "        transform=plt.gca().transAxes,\n",
+    "        bbox=dict(boxstyle=\"round\", facecolor=\"wheat\", alpha=0.5),\n",
+    "    )\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f\"Part2_figs/dist_of_ {var}\", facecolor=\"w\")"
    ]
   },
   {
